crates/frontend/samples/test13.out
error: identifier `c` not bound in all patterns
  ┌─ crates/frontend/samples/test13.fir:2:16
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                ^ variable not in all patterns
  │
  ┌─ crates/frontend/samples/test13.fir:2:20
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                    - pattern doesn't bind `c`
  │
  ┌─ crates/frontend/samples/test13.fir:2:24
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                        - pattern doesn't bind `c`
  │
  ┌─ crates/frontend/samples/test13.fir:2:28
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                            - pattern doesn't bind `c`

error: identifier `d` not bound in all patterns
  ┌─ crates/frontend/samples/test13.fir:2:20
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                    ^ variable not in all patterns
  │
  ┌─ crates/frontend/samples/test13.fir:2:16
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                - pattern doesn't bind `d`
  │
  ┌─ crates/frontend/samples/test13.fir:2:24
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                        - pattern doesn't bind `d`
  │
  ┌─ crates/frontend/samples/test13.fir:2:28
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                            - pattern doesn't bind `d`

error: identifier `e` not bound in all patterns
  ┌─ crates/frontend/samples/test13.fir:2:24
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                        ^ variable not in all patterns
  │
  ┌─ crates/frontend/samples/test13.fir:2:16
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                - pattern doesn't bind `e`
  │
  ┌─ crates/frontend/samples/test13.fir:2:20
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                    - pattern doesn't bind `e`
  │
  ┌─ crates/frontend/samples/test13.fir:2:28
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                            - pattern doesn't bind `e`

error: identifier `f` not bound in all patterns
  ┌─ crates/frontend/samples/test13.fir:2:28
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                            ^ variable not in all patterns
  │
  ┌─ crates/frontend/samples/test13.fir:2:16
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                - pattern doesn't bind `f`
  │
  ┌─ crates/frontend/samples/test13.fir:2:20
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                    - pattern doesn't bind `f`
  │
  ┌─ crates/frontend/samples/test13.fir:2:24
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                        - pattern doesn't bind `f`

error: identifier `g` not bound in all patterns
  ┌─ crates/frontend/samples/test13.fir:2:31
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                               ^ variable not in all patterns
  │
  ┌─ crates/frontend/samples/test13.fir:2:35
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                                   -- pattern doesn't bind `g`
  │
  ┌─ crates/frontend/samples/test13.fir:2:40
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                                        -- pattern doesn't bind `g`
  │
  ┌─ crates/frontend/samples/test13.fir:2:45
  │
2 │     let [a, b, c | d | e | f, g | () | () | ()] = [1, 2, 3, 4];
  │                                             -- pattern doesn't bind `g`

error: `||` not allowed in if-`let` chain
  ┌─ crates/frontend/samples/test13.fir:8:9
  │
8 │         || let maz = 3
  │         ^^
  │
  ┌─ crates/frontend/samples/test13.fir:8:12
  │
8 │         || let maz = 3
  │            ----------- `let` expression used here after the `||`

error: `||` not allowed in if-`let` chain
   ┌─ crates/frontend/samples/test13.fir:10:9
   │
10 │         || foo
   │         ^^
   │
   ┌─ crates/frontend/samples/test13.fir:11:12
   │
11 │         && let uh_oh = 6
   │            ------------- `let` expression used here after the `||`
